--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -140,26 +140,26 @@
 
 @media (max-width: 768px) {
   .footer {
-    padding: 32px 24px;
+    padding: 32px 16px 48px 16px;
 
     .footer-content {
       flex-direction: column;
-      align-items: center;
-      text-align: center;
+      align-items: flex-start;
       gap: 32px;
       min-height: auto;
+      max-width: 100%;
     }
 
     .footer-left {
-      align-items: center;
       width: 100%;
-
-      .logo {
-        justify-content: center;
-      }
+      gap: 32px;
 
       .info {
-        align-items: center;
+        gap: 8px;
+
+        p {
+          font-size: 16px;
+        }
       }
     }
 
@@ -171,13 +171,30 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      margin-top: 32px;
+
+      .copyright {
+        font-size: 18px;
+        text-align: center;
+      }
     }
 
     .footer-nav {
+      position: absolute;
+      right: 16px;
+      top: 0;
       flex-direction: column;
-      align-items: center;
-      width: 100%;
+      align-items: flex-start;
       gap: 8px;
+
+      .nav-link {
+        justify-content: flex-start;
+        padding-left: 2px;
+
+        .link-text {
+          font-size: 16px;
+        }
+      }
     }
   }
 }
