style: responsive for legal notice. also added back button

--- a/src/app/shared/legal-notice/legal-notice.html
+++ b/src/app/shared/legal-notice/legal-notice.html
@@ -1,5 +1,8 @@
 <section class="legal-notice-section">
     <div class="legal-notice-container">
+        <button class="back-button" (click)="goBack()">
+            <img src="assets/icon/project-icon/arrow_left.png" alt="Back" class="arrow-icon">
+        </button>
         <h1 class="legal-notice-title">Legal Notice</h1>
 
         <div class="legal-notice-text">
