--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -28,7 +28,7 @@
             </a>
             <a routerLink="/legal-notice" class="nav-link">
                 <span class="radio-button"></span>
-                <span class="link-text">Legal Notice</span>
+                <span class="link-text">{{ 'footer.legalNotice' | transloco }}</span>
             </a>
         </nav>
     </div>
