--- a/src/app/shared/header/menu/menu.html
+++ b/src/app/shared/header/menu/menu.html
@@ -2,6 +2,6 @@
     <a *ngFor="let item of menuItems" class="menu__link" [class.menu__link--active]="activeItem === item.id"
         [attr.href]="item.href" (click)="setActive(item.id)"
         [attr.aria-current]="activeItem === item.id ? 'true' : null">
-        {{ item.label }}
+        {{ item.translationKey | transloco }}
     </a>
 </nav>
