--- a/src/app/main/projects/project-dialog/project-info/project-info.html
+++ b/src/app/main/projects/project-dialog/project-info/project-info.html
@@ -2,13 +2,13 @@
     <div class="info__header">
         <span class="info__counter" aria-hidden="true">{{ formatProjectNumber(projectIndex) }}</span>
         <div class="info__title">
-            <h3 class="info__name">{{ project.title }}</h3>
+            <h3 class="info__name">{{ project.title | transloco }}</h3>
         </div>
     </div>
 
     <div class="info__summary">
-        <h4 class="info__question">What is this project about?</h4>
-        <p class="info__description">{{ project.description }}</p>
+        <h4 class="info__question">{{ 'projects.dialog.question' | transloco }}</h4>
+        <p class="info__description">{{ project.description | transloco }}</p>
     </div>
 
     <ul class="info__stack" aria-label="Technologies used">
@@ -21,12 +21,12 @@
     <div class="info__actions">
         <a *ngIf="project.githubUrl" class="info__button" [href]="project.githubUrl" target="_blank"
             rel="noopener noreferrer">
-            <span>GitHub</span>
+            <span>{{ 'projects.dialog.github' | transloco }}</span>
             <img src="assets/icon/project-icon/arrow_outward_green_default.png" alt="" aria-hidden="true" />
         </a>
         <a *ngIf="project.liveUrl" class="info__button" [href]="project.liveUrl" target="_blank"
             rel="noopener noreferrer">
-            <span>Live Test</span>
+            <span>{{ 'projects.dialog.liveTest' | transloco }}</span>
             <img src="assets/icon/project-icon/arrow_outward_green_default.png" alt="" aria-hidden="true" />
         </a>
     </div>
