--- a/src/app/main/references/references.html
+++ b/src/app/main/references/references.html
@@ -1,6 +1,6 @@
 <section class="references-section">
     <div class="container">
-        <h2 class="section-title">What colleagues say about me</h2>
+        <h2 class="section-title">{{ 'references.title' | transloco }}</h2>
 
         <div class="carousel-wrapper">
             <ul class="carousel" #carouselContainer>
