--- a/src/app/shared/legal-notice/legal-notice.html
+++ b/src/app/shared/legal-notice/legal-notice.html
@@ -3,111 +3,57 @@
         <button class="back-button" (click)="goBack()">
             <img src="assets/icon/project-icon/arrow_left.png" alt="Back" class="arrow-icon">
         </button>
-        <h1 class="legal-notice-title">Legal Notice</h1>
+        <h1 class="legal-notice-title">{{ 'legalNotice.title' | transloco }}</h1>
 
         <div class="legal-notice-text">
             <div class="text-content">
                 <div class="text-section">
-                    <h2>Imprint</h2>
+                    <h2>{{ 'legalNotice.sections.imprint.title' | transloco }}</h2>
                     <p class="imprint-info">
-                        Daniel Luzius<br>
-                        Hauptstraße 125<br>
-                        63500 Seligenstadt<br>
-                        Exploring the Board<br>
-                        Email: Danielluzius@mail.de
+                        {{ 'legalNotice.sections.imprint.name' | transloco }}<br>
+                        {{ 'legalNotice.sections.imprint.address' | transloco }}<br>
+                        {{ 'legalNotice.sections.imprint.city' | transloco }}<br>
+                        {{ 'legalNotice.sections.imprint.company' | transloco }}<br>
+                        {{ 'legalNotice.sections.imprint.email' | transloco }}
                     </p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Exploring the Board</h2>
-                    <p>Email: Danielluzius@mail.de</p>
+                    <h2>{{ 'legalNotice.sections.exploringTheBoard.title' | transloco }}</h2>
+                    <p>{{ 'legalNotice.sections.exploringTheBoard.email' | transloco }}</p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Acceptance of terms</h2>
-                    <p>
-                        By accessing and using <span class="highlight">Portfolio</span> (Product), you acknowledge and
-                        agree to the following terms and
-                        conditions, and any policies, guidelines, or amendments thereto that may be presented to you
-                        from time to time. We, the listed students, may update or change the terms and conditions from
-                        time to time without notice.
-                    </p>
+                    <h2>{{ 'legalNotice.sections.acceptanceOfTerms.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.acceptanceOfTerms.text' | transloco"></p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Scope and ownership of the product</h2>
-                    <p>
-                        <span class="highlight">Portfolio</span> has been developed as part of a student group project
-                        in a web development bootcamp at
-                        the <span class="highlight">Developer Akademie GmbH</span>. It has an educational purpose and is
-                        not intended for extensive
-                        personal & business usage. As such, we cannot guarantee consistent availability, reliability,
-                        accuracy, or any other aspect of quality regarding this Product.
-                    </p>
-                    <p>
-                        The design of <span class="highlight">Portfolio</span> is owned by the <span
-                            class="highlight">Developer Akademie GmbH</span>. Unauthorized use, reproduction,
-                        modification, distribution, or replication of the design is strictly prohibited.
-                    </p>
+                    <h2>{{ 'legalNotice.sections.scopeAndOwnership.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.scopeAndOwnership.text1' | transloco"></p>
+                    <p [innerHTML]="'legalNotice.sections.scopeAndOwnership.text2' | transloco"></p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Proprietary rights</h2>
-                    <p>
-                        Aside from the design owned by <span class="highlight">Developer Akademie GmbH</span>, we, the
-                        listed students, retain all
-                        proprietary rights in <span class="highlight">Portfolio</span>, including any associated
-                        copyrighted material, trademarks, and
-                        other proprietary information.
-                    </p>
+                    <h2>{{ 'legalNotice.sections.proprietaryRights.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.proprietaryRights.text' | transloco"></p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Use of the product</h2>
-                    <p>
-                        <span class="highlight">Portfolio</span> is intended to be used for lawful purposes only, in
-                        accordance with all applicable
-                        laws and regulations. Any use of <span class="highlight">Portfolio</span> for illegal
-                        activities, or to harass, harm, threaten,
-                        or intimidate another person, is strictly prohibited. You are solely responsible for your
-                        interactions with other users of <span class="highlight">Portfolio</span>.
-                    </p>
+                    <h2>{{ 'legalNotice.sections.useOfProduct.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.useOfProduct.text' | transloco"></p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Disclaimer of warranties and limitation of liability</h2>
-                    <p>
-                        <span class="highlight">Portfolio</span> is provided "as is" without warranty of any kind,
-                        whether express or implied,
-                        including but not limited to the implied warranties of merchantability, fitness for a particular
-                        purpose, and non-infringement. In no event will we, the listed students, or the <span
-                            class="highlight">Developer
-                            Akademie</span>, be liable for any direct, indirect, incidental, special, consequential or
-                        exemplary
-                        damages, including but not limited to, damages for loss of profits, goodwill, use, data, or
-                        other intangible losses, even if we have been advised of the possibility of such damages,
-                        arising out of or in connection with the use or performance of <span
-                            class="highlight">Portfolio</span>.
-                    </p>
+                    <h2>{{ 'legalNotice.sections.disclaimerOfWarranties.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.disclaimerOfWarranties.text' | transloco"></p>
                 </div>
 
                 <div class="text-section">
-                    <h2>Indemnity</h2>
-                    <p>
-                        You agree to indemnify, defend and hold harmless us, the listed students, the <span
-                            class="highlight">Developer
-                            Akademie</span>, and our affiliates, partners, officers, directors, agents, and employees,
-                        from and
-                        against any claim, demand, loss, damage, cost, or liability (including reasonable legal fees)
-                        arising out of or relating to your use of <span class="highlight">Portfolio</span> and/or your
-                        breach of this Legal Notice.
-                    </p>
-                    <p>
-                        For any questions or notices, please contact us at Danielluzius@mail.de.
-                    </p>
-                    <p class="date-info">
-                        Date: October 03, 2025
-                    </p>
+                    <h2>{{ 'legalNotice.sections.indemnity.title' | transloco }}</h2>
+                    <p [innerHTML]="'legalNotice.sections.indemnity.text1' | transloco"></p>
+                    <p>{{ 'legalNotice.sections.indemnity.text2' | transloco }}</p>
+                    <p class="date-info">{{ 'legalNotice.sections.indemnity.date' | transloco }}</p>
                 </div>
             </div>
         </div>
