--- a/src/app/main/hero/right-lateral/right-lateral.html
+++ b/src/app/main/hero/right-lateral/right-lateral.html
@@ -1,8 +1,8 @@
 <aside class="right-lateral">
-    <a class="email" href="mailto:danielluzius@mail.de">DANIELLUZIUS@MAIL.DE</a>
+    <a class="email" href="mailto:kontakt@danielluzius.de">KONTAKT@DANIELLUZIUS.DE</a>
 
     <div class="icons">
-        <a class="icon icon--email" href="mailto:danielluzius@mail.de" aria-label="Email">
+        <a class="icon icon--email" href="mailto:kontakt@danielluzius.de" aria-label="Email">
             <img class="icon__image icon__image--default" src="assets/icon/mail_icon.png" alt="Email Icon">
             <img class="icon__image icon__image--hover" src="assets/icon/mail_hover.png" alt="" aria-hidden="true">
             <img class="icon__circle" src="assets/icon/radio_hover.png" alt="" aria-hidden="true">
