--- a/src/app/shared/footer/footer.html
+++ b/src/app/shared/footer/footer.html
@@ -22,7 +22,7 @@
                 <span class="radio-button"></span>
                 <span class="link-text">LinkedIn</span>
             </a>
-            <a href="mailto:danielluzius@mail.de" class="nav-link">
+            <a href="mailto:kontakt@danielluzius.de" class="nav-link">
                 <span class="radio-button"></span>
                 <span class="link-text">Email</span>
             </a>
