--- a/src/app/main/projects/project-dialog/project-dialog.html
+++ b/src/app/main/projects/project-dialog/project-dialog.html
@@ -19,7 +19,7 @@
 
             <button class="dialog__next" type="button" (click)="onNext($event)" (mouseenter)="setNextHover(true)"
                 (mouseleave)="setNextHover(false)" (focus)="setNextHover(true)" (blur)="setNextHover(false)">
-                <span>Next project</span>
+                <span>{{ 'projects.dialog.nextProject' | transloco }}</span>
                 <img [src]="isNextHovered ? 'assets/icon/project-icon/arrow_right_hover.png' : 'assets/icon/project-icon/arrow_right.png'"
                     alt="" aria-hidden="true" />
             </button>
