--- a/src/app/main/about-me/photo/photo.html
+++ b/src/app/main/about-me/photo/photo.html
@@ -1,4 +1,4 @@
-<figure class="about-me__photo" aria-labelledby="about-me-heading">
+<figure #photoElement class="about-me__photo" aria-labelledby="about-me-heading">
     <div class="about-me__photo-frame">
         <img src="assets/img/daniel_transparent_img.png" alt="Portrait of Daniel Luzius working on a laptop"
             loading="lazy" />
